public/styles/header.scss
$mobile-breakpoint: 1020px;

.main-header {
  .menu-item {
    font-weight: 800;
    letter-spacing: 1.4px;
    font-size: 16px;
    text-transform: uppercase;
    user-select: none;
    display: flex;
    align-items: center;
    justify-content: center;

    .icon {
      path {
        @media screen and (max-width: $mobile-breakpoint) {
          fill: white;
        }
      }
      margin-right: 12px;
    }

    color: white;

    @media screen and (min-width: $mobile-breakpoint) {
      color: black;
      justify-content: start;
    }
  }

  .menu-dropdown-trigger {
    letter-spacing: 8px;
    font-size: 23px;
    justify-content: center;

    @media screen and (min-width: $mobile-breakpoint) {
      letter-spacing: 1.4px;
      font-size: 16px;
    }

    .icon {
      height: 26px;
      width: 26px;
    }

    .caret {
      margin-left: 4px;
      transition: transform 250ms;
      transform: rotate(-90deg);
      @media screen and (min-width: $mobile-breakpoint) {
        transform: rotate(0);
      }

      path {
        fill: white;
        @media screen and (min-width: $mobile-breakpoint) {
          fill: black;
        }
      }
    }
  }

  .nav-popup {
    @media screen and (min-width: $mobile-breakpoint) {
      position: absolute;
      left: 50%;
      transform: translate(-50%, 0);
    }
    &::before {
      content: '';
      height: 4px;
      display: block;
    }
  }

  .nav-popup-menu {
    padding: 8px;
    white-space: nowrap;

    @media screen and (min-width: $mobile-breakpoint) {
      background-color: white;
      border: 1px solid #e7e6eb;
      border-radius: 8px;
      box-shadow: 0px 16px 20px 0px #85819926;
    }

    a {
      color: black;
      &:not(:last-child) .menu-item {
        margin-bottom: 4px;
      }
    }

    .menu-item {
      padding: 8px;
      border-radius: 8px;

      @media screen and (min-width: $mobile-breakpoint) {
        &:hover {
          background-color: #f4f4f6;
        }
      }
    }
  }

  .locale-picker {
    .nav-popup-menu {
      .menu-item {
        padding: 4px 8px;
      }
    }

    .icon {
      height: 26px;
      width: 26px;
    }
  }

  .nav-popup-container {
    &.open {
      .caret {
        transform: rotate(0);
      }
    }
    &:not(.secondary) {
      padding: 24px;
      cursor: pointer;
    }

    &.secondary {
      @media screen and (max-width: $mobile-breakpoint) {
        width: 140px;
        margin: auto;
      }

      .menu-item {
        letter-spacing: 1.4px;
        font-size: 16px;
      }

      .menu-dropdown-trigger {
        cursor: pointer;
        padding: 4px 12px;
        border-radius: 7px;
      }

      .menu-dropdown-trigger,
      .nav-popup-menu {
        border-radius: 7px;
        border: 1px solid #d6d5df80;
        background-color: #fbfbfc10;
        @media screen and (min-width: $mobile-breakpoint) {
          background-color: #fbfbfc;
        }
      }
    }
  }

  .standard-button {
    padding: 12px 36px;
    margin-left: 32px;
    color: white;

    @media screen and (max-width: $mobile-breakpoint) {
      width: 140px;
      margin: auto;
      justify-content: center;
    }
  }
}

